[package]
name = "webhook"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
lto = true
