[package]
name = "zabbix-feishu-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
lto = true
