[package]
name = "zabbix-feishu-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0.140"

[profile.release]
lto = true
